--- a/Public/stylesheets/matrix.scss
+++ b/Public/stylesheets/matrix.scss
@@ -115,7 +115,7 @@ ul.matrix {
     .compatible {
       background-color: var(--matrix-result-compatible-background);
       color: var(--matrix-result-compatible-text);
-      font-size: 22px;
+      font-size: 20px;
     }
 
     .unknown {
@@ -127,6 +127,18 @@ ul.matrix {
     .incompatible {
       background-color: var(--matrix-result-incompatible-background);
       color: var(--matrix-result-incompatible-text);
+      font-size: 20px;
+    }
+
+    .succeeded {
+      background-color: var(--matrix-result-succeeded-background);
+      color: var(--matrix-result-succeeded-text);
+      font-size: 20px;
+    }
+
+    .failed {
+      background-color: var(--matrix-result-failed-background);
+      color: var(--matrix-result-failed-text);
       font-size: 20px;
     }
   }
