Added an unknown state that does not include hovering.

--- a/Public/stylesheets/builds.scss
+++ b/Public/stylesheets/builds.scss
@@ -45,7 +45,7 @@
         display: block;
       }
 
-      &:hover {
+      &:hover:not(.unknown) {
         a {
           display: block;
         }
