Fixed bug where incompatible and compatible classes would also get the hover behaviour.

--- a/Public/stylesheets/builds.scss
+++ b/Public/stylesheets/builds.scss
@@ -45,7 +45,7 @@
         display: block;
       }
 
-      &:hover:not(.unknown) {
+      &:hover:not(.unknown):not(.compatible):not(.incompatible) {
         a {
           display: block;
         }
