Added build logs scss.

--- a/Public/stylesheets/main.scss
+++ b/Public/stylesheets/main.scss
@@ -10,4 +10,5 @@ $mobile-breakpoint: 767px;
 @import 'package.scss';
 @import 'matrix.scss';
 @import 'builds.scss';
+@import 'build_logs.scss';
 @import 'error.scss';
