CSS for the build log.

--- a/Public/stylesheets/build_logs.scss
+++ b/Public/stylesheets/build_logs.scss
@@ -1,3 +1,8 @@
 /* -------------------------------------------------------------------------
   Individual build log page.
 ---------------------------------------------------------------------------- */
+
+.build_log {
+  white-space: pre-wrap;
+  height: 40vh;
+}
