--- a/Public/stylesheets/build_logs.scss
+++ b/Public/stylesheets/build_logs.scss
@@ -2,7 +2,7 @@
   Individual build log page.
 ---------------------------------------------------------------------------- */
 
-.build_log {
+#build_log {
   white-space: pre-wrap;
   height: 40vh;
 }
