--- a/Public/stylesheets/base.scss
+++ b/Public/stylesheets/base.scss
@@ -110,3 +110,30 @@ button {
 button:focus {
   outline: none;
 }
+
+.lozenge {
+  margin: 5px 0;
+  display: flex;
+  align-items: center;
+  padding: 7px 10px;
+  border-radius: 8px;
+  color: var(--lozenge-text);
+  font-weight: 600;
+  font-size: 18px;
+
+  i.icon {
+    margin-right: 7px;
+  }
+
+  &.green {
+    background-color: var(--lozenge-green-background);
+  }
+
+  &.orange {
+    background-color: var(--lozenge-orange-background);
+  }
+
+  &.red {
+    background-color: var(--lozenge-red-background);
+  }
+}
