--- a/Public/stylesheets/icon.scss
+++ b/Public/stylesheets/icon.scss
@@ -50,6 +50,7 @@ i.question:before { content: "\e909"; }
 i.warning:before { content: "\e90a"; }
 i.matrix_compatible:before { content: "\e90b"; }
 i.matrix_unknown:before { content: "\e90c"; }
+i.matrix_pending:before { content: "\e902"; }
 i.matrix_incompatible:before { content: "\e90d"; }
 i.matrix_succeeded:before { content: "\e90b"; }
 i.matrix_failed:before { content: "\e90d"; }
