Added a grey colour for the lozenge on the build log view.

--- a/Public/stylesheets/base.scss
+++ b/Public/stylesheets/base.scss
@@ -125,6 +125,10 @@ button:focus {
     margin-right: 7px;
   }
 
+  &.grey {
+    background-color: var(--lozenge-grey-background);
+  }
+
   &.green {
     background-color: var(--lozenge-green-background);
   }
