--- a/Public/stylesheets/colors.scss
+++ b/Public/stylesheets/colors.scss
@@ -82,6 +82,7 @@
   --rule-background: var(--light-blue);
 
   --lozenge-text: var(--white);
+  --lozenge-grey-background: var(--light-grey);
   --lozenge-green-background: var(--light-green);
   --lozenge-orange-background: var(--orange);
   --lozenge-red-background: var(--mid-red);
@@ -137,6 +138,7 @@
 
     --rule-background: var(--dark-blue);
 
+    --lozenge-grey-background: var(--very-very-dark-grey);
     --lozenge-green-background: var(--mid-green);
 
     --matrix-result-compatible-background: var(--mid-green);
