Added the `pending` matrix class.

--- a/Public/stylesheets/matrix.scss
+++ b/Public/stylesheets/matrix.scss
@@ -118,6 +118,7 @@ ul.matrix {
       font-size: 20px;
     }
 
+    .pending,
     .unknown {
       background-color: var(--matrix-result-unknown-background);
       color: var(--matrix-result-unknown-text);
