Added a link in the footer to the sponsorship page.

--- a/Public/stylesheets/header_footer.scss
+++ b/Public/stylesheets/header_footer.scss
@@ -84,11 +84,18 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    p {
+      margin: 3px 0;
+
+      a {
+        font-size: 13px;
+      }
+    }
   }
 
   small a {
-    font-size: 10px;
-    font-weight: normal;
+    font-size: 12px;
   }
 
   ul {
