Styling for the FAQ link.

--- a/Public/stylesheets/package.scss
+++ b/Public/stylesheets/package.scss
@@ -21,6 +21,20 @@
       }
     }
   }
+
+  .license {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+    > * {
+      margin-right: 10px;
+
+      &:last-child {
+        margin-right: 0;
+      }
+    }
+  }
 }
 
 p.description {
