Create a package list styling.

--- a/Public/stylesheets/colors.scss
+++ b/Public/stylesheets/colors.scss
@@ -101,6 +101,8 @@
   --matrix-result-failed-background: var(--very-light-grey);
   --matrix-result-failed-text: var(--mid-red);
 
+  --package-list-background: var(--very-very-light-grey);
+
   --icon-text: var(--dark-grey);
 
   --error-background: var(--light-red);
@@ -149,6 +151,8 @@
     --matrix-result-succeeded-text: var(--mid-green);
     --matrix-result-failed-background: var(--very-dark-grey);
     --matrix-result-failed-text: var(--mid-red);
+
+    --package-list-background: var(--very-very-dark-grey);
 
     --icon-text: var(--light-grey);
 
