--- a/Public/stylesheets/package.scss
+++ b/Public/stylesheets/package.scss
@@ -73,3 +73,31 @@ p.description {
     }
   }
 }
+
+.package_list {
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+
+  li {
+    margin: 5px 0;
+    display: flex;
+    flex-direction: column;
+    flex-basis: 49%;
+    background-color: var(--package-list-background);
+
+    a {
+      padding: 15px;
+
+      h4 {
+        margin: 0;
+      }
+
+      p {
+        margin: 5px 0;
+        color: var(--page-text);
+      }
+    }
+  }
+}
