Mobile styling for the package list.

--- a/Public/stylesheets/package.scss
+++ b/Public/stylesheets/package.scss
@@ -100,4 +100,10 @@ p.description {
       }
     }
   }
+
+  @media screen and (max-width: $mobile-breakpoint) {
+    li {
+      flex-basis: 100%;
+    }
+  }
 }
