--- a/Public/stylesheets/package.scss
+++ b/Public/stylesheets/package.scss
@@ -26,12 +26,15 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-
-    > * {
-      margin-right: 10px;
-
-      &:last-child {
-        margin-right: 0;
+    
+    >:first-child {
+        display: none;
+        margin-right: 8px;
+    }
+    
+    &:hover {
+      >:first-child {
+        display: block;
       }
     }
   }
