Visibility is better than display here because of the hover target.

--- a/Public/stylesheets/package.scss
+++ b/Public/stylesheets/package.scss
@@ -28,13 +28,13 @@
     align-items: center;
     
     >:first-child {
-        display: none;
+        visibility: hidden;
         margin-right: 8px;
     }
     
     &:hover {
       >:first-child {
-        display: block;
+        visibility: visible;
       }
     }
   }
