Align the last item in a split items to the right, and add some spascing.

--- a/Public/stylesheets/layout.scss
+++ b/Public/stylesheets/layout.scss
@@ -23,6 +23,11 @@
   .split {
     flex-direction: column;
     align-items: flex-start;
+    
+    >:last-child {
+      margin-top: 10px;
+      margin-left: auto;
+    }
   }
 }
 
