--- a/Public/stylesheets/highlight.scss
+++ b/Public/stylesheets/highlight.scss
@@ -2,71 +2,102 @@
   display: block;
   overflow-x: auto;
   padding: 0.5em;
-  color: #657b83;
+  background: #fbf1c7;
+}
+
+.hljs,
+.hljs-subst {
+  color: #3c3836;
+}
+
+/* Gruvbox Red */
+.hljs-deletion,
+.hljs-formula,
+.hljs-keyword,
+.hljs-link,
+.hljs-selector-tag {
+  color: #9d0006;
+}
+
+/* Gruvbox Blue */
+.hljs-built_in,
+.hljs-emphasis,
+.hljs-name,
+.hljs-quote,
+.hljs-strong,
+.hljs-title,
+.hljs-variable {
+  color: #076678;
+}
+
+/* Gruvbox Yellow */
+.hljs-attr,
+.hljs-params,
+.hljs-template-tag,
+.hljs-type {
+  color: #b57614;
+}
+
+/* Gruvbox Purple */
+.hljs-builtin-name,
+.hljs-doctag,
+.hljs-literal,
+.hljs-number {
+  color: #8f3f71;
+}
+
+/* Gruvbox Orange */
+.hljs-code,
+.hljs-meta,
+.hljs-regexp,
+.hljs-selector-id,
+.hljs-template-variable {
+  color: #af3a03;
+}
+
+/* Gruvbox Green */
+.hljs-addition,
+.hljs-meta-string,
+.hljs-section,
+.hljs-selector-attr,
+.hljs-selector-class,
+.hljs-string,
+.hljs-symbol {
+  color: #79740e;
+}
+
+/* Gruvbox Aqua */
+.hljs-attribute,
+.hljs-bullet,
+.hljs-class,
+.hljs-function,
+.hljs-function .hljs-keyword,
+.hljs-meta-keyword,
+.hljs-selector-pseudo,
+.hljs-tag {
+  color: #427b58;
+}
+
+/* Gruvbox Gray */
+.hljs-comment {
+  color: #928374;
+}
+
+/* Gruvbox Purple */
+.hljs-link_label,
+.hljs-literal,
+.hljs-number {
+  color: #8f3f71;
 }
 
 .hljs-comment,
-.hljs-quote {
-  color: #93a1a1;
-}
-
-.hljs-keyword,
-.hljs-selector-tag,
-.hljs-addition {
-  color: #859900;
-}
-
-.hljs-number,
-.hljs-string,
-.hljs-meta .hljs-meta-string,
-.hljs-literal,
-.hljs-doctag,
-.hljs-regexp {
-  color: #2aa198;
-}
-
-.hljs-title,
-.hljs-section,
-.hljs-name,
-.hljs-selector-id,
-.hljs-selector-class {
-  color: #268bd2;
-}
-
-.hljs-attribute,
-.hljs-attr,
-.hljs-variable,
-.hljs-template-variable,
-.hljs-class .hljs-title,
-.hljs-type {
-  color: #b58900;
-}
-
-.hljs-symbol,
-.hljs-bullet,
-.hljs-subst,
-.hljs-meta,
-.hljs-meta .hljs-keyword,
-.hljs-selector-attr,
-.hljs-selector-pseudo,
-.hljs-link {
-  color: #cb4b16;
-}
-
-.hljs-built_in,
-.hljs-deletion {
-  color: #dc322f;
-}
-
-.hljs-formula {
-  background: #eee8d5;
-}
-
 .hljs-emphasis {
   font-style: italic;
 }
 
-.hljs-strong {
+.hljs-section,
+.hljs-strong,
+.hljs-tag {
   font-weight: bold;
 }
 
@@ -75,71 +106,102 @@
     display: block;
     overflow-x: auto;
     padding: 0.5em;
-    color: #839496;
+    background: #282828;
+  }
+  
+  .hljs,
+  .hljs-subst {
+    color: #ebdbb2;
+  }
+  
+  /* Gruvbox Red */
+  .hljs-deletion,
+  .hljs-formula,
+  .hljs-keyword,
+  .hljs-link,
+  .hljs-selector-tag {
+    color: #fb4934;
+  }
+  
+  /* Gruvbox Blue */
+  .hljs-built_in,
+  .hljs-emphasis,
+  .hljs-name,
+  .hljs-quote,
+  .hljs-strong,
+  .hljs-title,
+  .hljs-variable {
+    color: #83a598;
+  }
+  
+  /* Gruvbox Yellow */
+  .hljs-attr,
+  .hljs-params,
+  .hljs-template-tag,
+  .hljs-type {
+    color: #fabd2f;
+  }
+  
+  /* Gruvbox Purple */
+  .hljs-builtin-name,
+  .hljs-doctag,
+  .hljs-literal,
+  .hljs-number {
+    color: #8f3f71;
+  }
+  
+  /* Gruvbox Orange */
+  .hljs-code,
+  .hljs-meta,
+  .hljs-regexp,
+  .hljs-selector-id,
+  .hljs-template-variable {
+    color: #fe8019;
+  }
+  
+  /* Gruvbox Green */
+  .hljs-addition,
+  .hljs-meta-string,
+  .hljs-section,
+  .hljs-selector-attr,
+  .hljs-selector-class,
+  .hljs-string,
+  .hljs-symbol {
+    color: #b8bb26;
+  }
+  
+  /* Gruvbox Aqua */
+  .hljs-attribute,
+  .hljs-bullet,
+  .hljs-class,
+  .hljs-function,
+  .hljs-function .hljs-keyword,
+  .hljs-meta-keyword,
+  .hljs-selector-pseudo,
+  .hljs-tag {
+    color: #8ec07c;
+  }
+  
+  /* Gruvbox Gray */
+  .hljs-comment {
+    color: #928374;
+  }
+  
+  /* Gruvbox Purple */
+  .hljs-link_label,
+  .hljs-literal,
+  .hljs-number {
+    color: #d3869b;
   }
   
   .hljs-comment,
-  .hljs-quote {
-    color: #586e75;
-  }
-
-  .hljs-keyword,
-  .hljs-selector-tag,
-  .hljs-addition {
-    color: #859900;
-  }
-
-  .hljs-number,
-  .hljs-string,
-  .hljs-meta .hljs-meta-string,
-  .hljs-literal,
-  .hljs-doctag,
-  .hljs-regexp {
-    color: #2aa198;
-  }
-
-  .hljs-title,
-  .hljs-section,
-  .hljs-name,
-  .hljs-selector-id,
-  .hljs-selector-class {
-    color: #268bd2;
-  }
-
-  .hljs-attribute,
-  .hljs-attr,
-  .hljs-variable,
-  .hljs-template-variable,
-  .hljs-class .hljs-title,
-  .hljs-type {
-    color: #b58900;
-  }
-
-  .hljs-symbol,
-  .hljs-bullet,
-  .hljs-subst,
-  .hljs-meta,
-  .hljs-meta .hljs-keyword,
-  .hljs-selector-attr,
-  .hljs-selector-pseudo,
-  .hljs-link {
-    color: #cb4b16;
-  }
-
-  .hljs-built_in,
-  .hljs-deletion {
-    color: #dc322f;
-  }
-  
-  .hljs-formula {
-    background: #073642;
-  }
-  
   .hljs-emphasis {
     font-style: italic;
   }
   
-  .hljs-strong {
+  .hljs-section,
+  .hljs-strong,
+  .hljs-tag {
     font-weight: bold;
   }
 }
