--- a/Public/stylesheets/base.scss
+++ b/Public/stylesheets/base.scss
@@ -64,6 +64,27 @@ pre {
   overflow: scroll;
 }
 
+table {
+  width: 100%;
+  width: max-content;
+  max-width: 100%;
+  overflow: auto;
+  border-collapse: collapse;
+  
+  th {
+    background-color: var(--table-header-background);
+  }
+
+  th, td {
+    padding: 5px 10px;
+    border: 1px solid var(--grey);
+  }
+
+  tr:nth-child(2n) {
+    background-color: var(--table-row-alt-background);
+  }
+}
+
 hr {
   margin: 40px 0;
   border: 0;
