--- a/Public/stylesheets/colors.scss
+++ b/Public/stylesheets/colors.scss
@@ -61,6 +61,9 @@
 
   --table-header-background: var(--very-light-grey);
   --table-row-alt-background: var(--very-very-light-grey);
+  
+  --blockquote-text: var(--dark-grey);
+  --blockquote-border: var(--light-grey);
 
   --header-background: var(--very-dark-blue);
   --header-text: var(--white);
@@ -125,6 +128,9 @@
 
     --table-header-background: var(--very-dark-grey);
     --table-row-alt-background: var(--very-very-dark-grey);
+
+    --blockquote-text: var(--light-grey);
+    --blockquote-border: var(--dark-grey);
 
     --header-background: var(--very-dark-blue);
     --header-gradient-start: rgba(255, 255, 255, 0.08);
