Added a header comment to the readme css.

--- a/Public/stylesheets/readme.scss
+++ b/Public/stylesheets/readme.scss
@@ -1,3 +1,7 @@
+/* -------------------------------------------------------------------------
+  Styles specific to the readme section of the page.
+---------------------------------------------------------------------------- */
+
 article.readme {
   overflow: hidden;
 
