--- a/Public/stylesheets/base.scss
+++ b/Public/stylesheets/base.scss
@@ -9,7 +9,9 @@
 body {
   color: var(--page-text);
   background-color: var(--page-background);
-  font-family: "Open Sans", -apple-system, "BlinkMacSystemFont", "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+  font-family: -apple-system, "BlinkMacSystemFont", "SF Hello", "Segoe UI",
+    "Roboto", "Helvetica Neue", "Arial", sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji";
   font-size: 16px;
   line-height: 1.4;
 }
@@ -19,12 +21,12 @@ h1 {
   padding: 0;
   font-size: 23px;
   line-height: 1.2;
+  font-weight: 600;
 }
 
 h2 {
   font-size: 35px;
   line-height: 1;
-  letter-spacing: -0.5px;
 }
 
 h3 {
@@ -70,12 +72,13 @@ table {
   max-width: 100%;
   overflow: auto;
   border-collapse: collapse;
-  
+
   th {
     background-color: var(--table-header-background);
   }
 
-  th, td {
+  th,
+  td {
     padding: 5px 10px;
     border: 1px solid var(--grey);
   }
