--- a/Public/stylesheets/colors.scss
+++ b/Public/stylesheets/colors.scss
@@ -7,28 +7,30 @@
 :root {
   --very-dark-blue: #111930;
   --dark-blue: #232339;
-  --mid-blue: #356FCE;
-  --light-blue: #BEDEFF;
-  --very-light-blue: #E6F2FF;
+  --mid-blue: #356fce;
+  --light-blue: #bedeff;
+  --very-light-blue: #e6f2ff;
 
   --dark-green: #027353;
-  --mid-green: #038C33;
-  --light-green: #68BB13;
+  --mid-green: #038c33;
+  --light-green: #68bb13;
 
-  --yellow: #F2B94F;
-  --orange: #F58E36;
-  --mid-red: #CC4444;
-  --light-red: #FFEEEE;
+  --yellow: #f2b94f;
+  --orange: #f58e36;
+  --mid-red: #cc4444;
+  --light-red: #ffeeee;
+  --pink: #ea4aaa;
+  --light-pink: #fff2fa;
 
-  --black: #1D1D1D;
+  --black: #1d1d1d;
   --very-very-dark-grey: #232323;
-  --very-dark-grey: #2F2F2F;
-  --dark-grey: #3E3E3E;
-  --grey: #9A9A9A;
-  --light-grey: #DADADA;
-  --very-light-grey: #F1F1F1;
-  --very-very-light-grey: #F8F8F8;
-  --white: #FFFFFF;
+  --very-dark-grey: #2f2f2f;
+  --dark-grey: #3e3e3e;
+  --grey: #9a9a9a;
+  --light-grey: #dadada;
+  --very-light-grey: #f1f1f1;
+  --very-very-light-grey: #f8f8f8;
+  --white: #ffffff;
 }
 
 /* Dark mode base color overrides */
@@ -36,18 +38,18 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --black: #070710;
-    --very-very-dark-grey: #0E0E19;
+    --very-very-dark-grey: #0e0e19;
     --very-dark-grey: #191923;
 
-    --mid-blue: #55B7FF;
-    --orange: #EC8329;
-    --mid-red: #FF4343;
+    --mid-blue: #55b7ff;
+    --orange: #ec8329;
+    --mid-red: #ff4343;
     --dark-red: #250201;
-    --yellow: #FFB834;
+    --yellow: #ffb834;
 
-    --mid-green: #0EBF4C;
-    --light-green: #96FF4C;
-    --dark-green: #0C946E;
+    --mid-green: #0ebf4c;
+    --light-green: #96ff4c;
+    --dark-green: #0c946e;
   }
 }
 
@@ -61,7 +63,7 @@
 
   --table-header-background: var(--very-light-grey);
   --table-row-alt-background: var(--very-very-light-grey);
-  
+
   --blockquote-text: var(--dark-grey);
   --blockquote-border: var(--light-grey);
 
@@ -95,6 +97,9 @@
   --stable-text: var(--light-green);
   --beta-text: var(--mid-green);
   --branch-text: var(--dark-green);
+
+  --support-text: var(--pink);
+  --support-background: var(--light-pink);
 
   --matrix-result-compatible-background: var(--light-green);
   --matrix-result-compatible-text: var(--white);
