--- a/Public/stylesheets/icon.scss
+++ b/Public/stylesheets/icon.scss
@@ -4,8 +4,7 @@
 
 @font-face {
   font-family: "icomoon";
-  src:
-    url("/fonts/icomoon.ttf?6e6v40") format("truetype"),
+  src: url("/fonts/icomoon.ttf?6e6v40") format("truetype"),
     url("/fonts/icomoon.woff?6e6v40") format("woff"),
     url("/fonts/icomoon.svg?6e6v40#icomoon") format("svg");
   font-weight: normal;
@@ -42,21 +41,78 @@ span > i.icon {
   margin: 0 4px;
 }
 
-i.osi:before { content: "\e900"; }
-i.stable:before { content: "\e906"; }
-i.beta:before { content: "\e907"; }
-i.branch:before { content: "\e908"; }
-i.question:before { content: "\e909"; }
-i.warning:before { content: "\e90a"; }
-i.matrix_compatible:before { content: "\e90b"; }
-i.matrix_unknown:before { content: "\e90c"; }
-i.matrix_pending:before { content: "\e902"; }
-i.matrix_incompatible:before { content: "\e90d"; }
-i.matrix_succeeded:before { content: "\e90b"; }
-i.matrix_failed:before { content: "\e90d"; }
+i.osi:before {
+  content: "\e900";
+}
 
-li.author:before { content: "\e901"; }
-li.history:before { content: "\e902" }
-li.activity:before { content: "\e903"; }
-li.products:before { content: "\e904"; }
-li.stars:before { content: "\e905"; }
+i.stable:before {
+  content: "\e906";
+}
+
+i.beta:before {
+  content: "\e907";
+}
+
+i.branch:before {
+  content: "\e908";
+}
+
+i.question:before {
+  content: "\e909";
+}
+
+i.warning:before {
+  content: "\e90a";
+}
+
+i.matrix_compatible:before {
+  content: "\e90b";
+}
+
+i.matrix_unknown:before {
+  content: "\e90c";
+}
+
+i.matrix_pending:before {
+  content: "\e902";
+}
+
+i.matrix_incompatible:before {
+  content: "\e90d";
+}
+
+i.matrix_succeeded:before {
+  content: "\e90b";
+}
+
+i.matrix_failed:before {
+  content: "\e90d";
+}
+
+li.author:before {
+  content: "\e901";
+}
+
+li.osi:before {
+  content: "\e900";
+}
+
+li.warning:before {
+  content: "\e90a";
+}
+
+li.history:before {
+  content: "\e902";
+}
+
+li.activity:before {
+  content: "\e903";
+}
+
+li.products:before {
+  content: "\e904";
+}
+
+li.stars:before {
+  content: "\e905";
+}
