--- a/Public/stylesheets/main.scss
+++ b/Public/stylesheets/main.scss
@@ -1,16 +1,15 @@
 $mobile-breakpoint: 767px;
 
-@import 'colors.scss';
-@import 'base.scss';
-@import 'icon.scss';
-@import 'layout.scss';
-@import 'header_footer.scss';
-@import 'home.scss';
-@import 'markdown.scss';
-@import 'package.scss';
-@import 'matrix.scss';
-@import 'builds.scss';
-@import 'build_logs.scss';
-@import 'error.scss';
-@import 'readme.scss';
-@import 'highlight.scss';
+@import "colors.scss";
+@import "base.scss";
+@import "layout.scss";
+@import "header_footer.scss";
+@import "home.scss";
+@import "markdown.scss";
+@import "package.scss";
+@import "matrix.scss";
+@import "builds.scss";
+@import "build_logs.scss";
+@import "error.scss";
+@import "readme.scss";
+@import "highlight.scss";
