--- a/Public/stylesheets/package.scss
+++ b/Public/stylesheets/package.scss
@@ -23,44 +23,57 @@
       grid-row-start: 1;
 
       ul {
-        padding: 0 20px;
+        padding: 0;
         display: grid;
         grid-template-columns: 0.5fr 0.5fr;
         gap: 15px;
-        list-style: outside none;
+
+        li {
+          padding-left: 30px;
+          list-style: outside none none;
+          background-size: 18px;
+          background-repeat: no-repeat;
+          background-position: top 2px left;
+        }
 
         li.no_data {
           display: none;
         }
 
-        li.license {
-          grid-column-start: 1;
-          grid-row-start: 1;
-        }
-
-        li.stars {
-          grid-column-start: 2;
-          grid-row-start: 1;
-        }
-
         li.history {
           grid-column-start: span 2;
-          grid-row-start: 2;
+          grid-row-start: 1;
+          background-image: url("../images/clock.svg");
         }
 
         li.activity {
           grid-column-start: span 2;
+          grid-row-start: 2;
+          background-image: url("../images/inbox.svg");
+        }
+
+        li.license {
+          grid-column-start: 1;
           grid-row-start: 3;
+          background-image: url("../images/osi.svg");
+        }
+
+        li.stars {
+          grid-column-start: 2;
+          grid-row-start: 3;
+          background-image: url("../images/star.svg");
         }
 
         li.libraries {
           grid-column-start: 1;
           grid-row-start: 4;
+          background-image: url("../images/package.svg");
         }
 
-        li.libraries {
+        li.executables {
           grid-column-start: 2;
           grid-row-start: 4;
+          background-image: url("../images/package.svg");
         }
       }
     }
