Added images stylesheet with dark and light images.

--- a/Public/stylesheets/main.scss
+++ b/Public/stylesheets/main.scss
@@ -1,6 +1,7 @@
 $mobile-breakpoint: 767px;
 
 @import "colors.scss";
+@import "images.scss";
 @import "base.scss";
 @import "layout.scss";
 @import "header_footer.scss";
