Prevent the error message styling clashing with the rest of the site.

--- a/Public/stylesheets/error.scss
+++ b/Public/stylesheets/error.scss
@@ -2,9 +2,8 @@
   Error page.
 ---------------------------------------------------------------------------- */
 
-.error {
+section.error_message {
   padding: 100px 0;
-  text-align: center;
 
   i {
     font-size: 35px;
