--- a/Public/stylesheets/images.scss
+++ b/Public/stylesheets/images.scss
@@ -6,12 +6,12 @@
 
 :root {
   --image-box: url("/images/box.svg");
-  --image-circle-beta: url("/images/circle_beta.svg");
-  --image-circle-branch: url("/images/circle_branch.svg");
-  --image-circle-exclamation_mark: url("/images/circle_exclamation_mark.svg");
+  --image-stable: url("/images/stable.svg");
+  --image-beta: url("/images/beta.svg");
+  --image-branch: url("/images/branch.svg");
+  --image-circle-exclamation-mark: url("/images/circle_exclamation_mark.svg");
   --image-circle-prompt: url("/images/circle_prompt.svg");
-  --image-circle-question_mark: url("/images/circle_question_mark.svg");
-  --image-circle-tick: url("/images/circle_tick.svg");
+  --image-circle-question-mark: url("/images/circle_question_mark.svg");
   --image-clock: url("/images/clock.svg");
   --image-cross: url("/images/cross.svg");
   --image-github: url("/images/github.svg");
@@ -28,12 +28,12 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --image-box: url("/images/box~dark.svg");
-    --image-circle-beta: url("/images/circle_beta~dark.svg");
-    --image-circle-branch: url("/images/circle_branch~dark.svg");
-    --image-circle-exclamation_mark: url("/images/circle_exclamation_mark~dark.svg");
+    --image-stable: url("/images/stable~dark.svg");
+    --image-beta: url("/images/beta~dark.svg");
+    --image-branch: url("/images/branch~dark.svg");
+    --image-circle-exclamation-mark: url("/images/circle_exclamation_mark~dark.svg");
     --image-circle-prompt: url("/images/circle_prompt~dark.svg");
-    --image-circle-question_mark: url("/images/circle_question_mark~dark.svg");
-    --image-circle-tick: url("/images/circle_tick~dark.svg");
+    --image-circle-question-mark: url("/images/circle_question_mark~dark.svg");
     --image-clock: url("/images/clock~dark.svg");
     --image-cross: url("/images/cross~dark.svg");
     --image-github: url("/images/github~dark.svg");
