Finished up license styling for now.

--- a/Public/stylesheets/package.scss
+++ b/Public/stylesheets/package.scss
@@ -38,6 +38,18 @@
 
         li.license {
           background-image: var(--image-osi);
+
+          small {
+            margin-right: 10px;
+          }
+
+          &.warning {
+            background-image: var(--image-circle-question-mark);
+          }
+
+          &.error {
+            background-image: var(--image-circle-exclamation-mark);
+          }
         }
 
         li.stars {
