--- a/Public/stylesheets/images.scss
+++ b/Public/stylesheets/images.scss
@@ -9,18 +9,18 @@
   --image-stable: url("/images/stable.svg");
   --image-beta: url("/images/beta.svg");
   --image-branch: url("/images/branch.svg");
+  --image-compatible: url("/images/compatible.svg");
+  --image-unknown: url("/images/unknown.svg");
+  --image-incompatible: url("/images/incompatible.svg");
   --image-circle-exclamation-mark: url("/images/circle_exclamation_mark.svg");
-  --image-circle-prompt: url("/images/circle_prompt.svg");
+  --image-prompt: url("/images/prompt.svg");
   --image-circle-question-mark: url("/images/circle_question_mark.svg");
   --image-clock: url("/images/clock.svg");
-  --image-cross: url("/images/cross.svg");
   --image-github: url("/images/github.svg");
   --image-osi: url("/images/osi.svg");
   --image-person: url("/images/person.svg");
-  --image-question-mark: url("/images/question_mark.svg");
   --image-speech-bubble: url("/images/speech_bubble.svg");
   --image-star: url("/images/star.svg");
-  --image-tick: url("/images/tick.svg");
 }
 
 /* Dark mode images */
@@ -31,17 +31,17 @@
     --image-stable: url("/images/stable~dark.svg");
     --image-beta: url("/images/beta~dark.svg");
     --image-branch: url("/images/branch~dark.svg");
+    --image-compatible: url("/images/compatible~dark.svg");
+    --image-unknown: url("/images/unknown~dark.svg");
+    --image-incompatible: url("/images/incompatible~dark.svg");
     --image-circle-exclamation-mark: url("/images/circle_exclamation_mark~dark.svg");
-    --image-circle-prompt: url("/images/circle_prompt~dark.svg");
+    --image-prompt: url("/images/prompt~dark.svg");
     --image-circle-question-mark: url("/images/circle_question_mark~dark.svg");
     --image-clock: url("/images/clock~dark.svg");
-    --image-cross: url("/images/cross~dark.svg");
     --image-github: url("/images/github~dark.svg");
     --image-osi: url("/images/osi~dark.svg");
     --image-person: url("/images/person~dark.svg");
-    --image-question-mark: url("/images/question_mark~dark.svg");
     --image-speech-bubble: url("/images/speech_bubble~dark.svg");
     --image-star: url("/images/star~dark.svg");
-    --image-tick: url("/images/tick~dark.svg");
   }
 }
