Redesigned the versions section a bit.

--- a/Public/stylesheets/package.scss
+++ b/Public/stylesheets/package.scss
@@ -115,6 +115,10 @@
         li {
           display: flex;
           flex-direction: column;
+
+          strong {
+            font-size: 14px;
+          }
         }
       }
     }
