--- a/Public/stylesheets/package.scss
+++ b/Public/stylesheets/package.scss
@@ -26,9 +26,21 @@
       grid-column-start: main;
       grid-row-start: 1;
 
-      ul.icons {
+      ul {
         grid-template-columns: 0.5fr 0.5fr;
         grid-auto-flow: row;
+        margin: 10px 0;
+        padding: 0;
+        display: grid;
+        gap: 15px;
+
+        li {
+          padding: 0 0 0 30px;
+          list-style: outside none none;
+          background-size: 18px;
+          background-repeat: no-repeat;
+          background-position: top 2px left;
+        }
 
         li.history {
           grid-column-start: span 2;
@@ -95,14 +107,7 @@
       grid-column-start: sidebar;
       grid-row-start: 1;
 
-      ul.icons {
-        li.github {
-          background-image: var(--image-github);
-        }
-
-        li.compatibility {
-          background-image: var(--image-stable);
-        }
+      ul {
       }
     }
 
