Cleaned up the license CSS a bit.

--- a/Public/stylesheets/package.scss
+++ b/Public/stylesheets/package.scss
@@ -62,23 +62,11 @@
           &.error {
             background-image: var(--image-error);
           }
-
-          .compatible_license,
-          .incompatible_license,
           .no_license {
-            font-weight: 600;
-          }
-
-          .no_license {
-            font-weight: 600;
             color: var(--lozenge-red-background);
           }
 
-          #license_link {
-            font-weight: 600;
-          }
-
-          #license_info {
+          #license_more_info {
             display: block;
             font-size: 11px;
           }
