Added a padded <hr> above the readme section.

--- a/Public/stylesheets/base.scss
+++ b/Public/stylesheets/base.scss
@@ -99,6 +99,10 @@ hr {
   border: 0;
   height: 2px;
   background-color: var(--rule-background);
+
+  &.padded {
+    margin: 30px auto;
+  }
 }
 
 section hr {
