--- a/Public/stylesheets/colors.scss
+++ b/Public/stylesheets/colors.scss
@@ -88,6 +88,7 @@
   --button-border: var(--light-blue);
 
   --rule-background: var(--light-blue);
+  --rule-thin-background: var(--light-grey);
 
   --lozenge-text: var(--white);
   --lozenge-green-background: var(--light-green);
@@ -155,6 +156,7 @@
     --button-border: var(--mid-blue);
 
     --rule-background: var(--dark-blue);
+    --rule-thin-background: var(--dark-grey);
 
     --lozenge-green-background: var(--mid-green);
 
